k8s/appointment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: hospital-aws
  labels:
    app: appointment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: appointment-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
