k8s/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: hospital-aws
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
